# TewsFiles

./: CMakeLists.txt  README.md  build.sh
src/: TewsFilesVersion.cpp.in  TewsFilesVersion.h  tewsfiles.cpp
